@@ -12,7 +12,7 @@ libneuralnetsse_la_SOURCES = neuralnetsse.c
 libneuralnetsse_la_CFLAGS = $(SSE_CFLAGS)
 
 libevent_la_SOURCES = list.c neuralnet.c mt19937ar.c isaac.c md5.c sse.h mm_malloc.h cache.c \
-		      cache.h list.h neuralnet.h mt19937ar.h isaac.h isaacs.h md5.h sse.h mm_malloc.h $(srcdir)/../eval.h gnubg-types.h
+		      cache.h list.h neuralnet.h mt19937ar.h isaac.h isaacs.h md5.h sse.h mm_malloc.h $(srcdir)/../eval.h gnubg-types.h sigmoid.h
 libevent_la_LIBADD = libneuralnetsse.la
 
 noinst_HEADERS = cache.h list.h neuralnet.h mt19937ar.h isaac.h isaacs.h md5.h sse.h mm_malloc.h $(srcdir)/../eval.h
